--- a/views/main-en/includes/head.ejs
+++ b/views/main-en/includes/head.ejs
@@ -52,7 +52,7 @@
                                 <div class="canven-menu-iner">
                                     <ul>
                                         <li><a href="/">Home</a></li>
-                                        <li><a href="/about">about ud</a></li>
+                                        <li><a href="/about">about us</a></li>
                                         <li><a href="/service">services</a></li>
                                         <li><a href="/projects">projects</a></li>
                                         <li><a href="/contact">contact us</a></li>
