--- a/views/main-ar/about.ejs
+++ b/views/main-ar/about.ejs
@@ -51,6 +51,71 @@
     </div>
 
 
+    <!-- our clients part start-->
+    <div class="our_clients">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="section_tittle">
+                        <h2>عملاؤنا</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="single_page_special_item owl-carousel text-center">
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/1.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/2.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/3.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/4.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/5.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/6.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/7.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/8.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/9.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/10.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/11.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/12.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/13.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/14.png" alt="">
+                        </div>
+                        <div class="single_slide_item">
+                            <img src="/main/img/clints/15.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- our clients part end-->
+
     <!-- map us part start-->
     <section class="map_part">
         <div class="container-fluid">
@@ -64,8 +129,8 @@
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <!-- map us part end-->
+
 
     <%- include('includes/footer') %>
