--- a/views/main-ar/includes/footer.ejs
+++ b/views/main-ar/includes/footer.ejs
@@ -20,10 +20,9 @@
                 </div>
                 <div class="col-lg-4">
                     <ul class="list-unstyled nav-links social nav-right">
-                        <li><a href="#"><span class="ti-twitter"></span></a></li>
-                        <li><a href="#"><span class="ti-instagram"></span></a></li>
+                        <li><a href="#"><span class="ti-youtube"></span></a></li>
                         <li><a href="#"><span class="ti-facebook"></span></a></li>
-                        <li><a href="#"><span class="ti-pinterest"></span></a></li>
+                        <li><a href="#"><span class="ti-linkedin"></span></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-12 text-lg-center" style="border-top: 2px solid #fff; margin-top: 10px;">
