--- a/views/main-en/includes/footer.ejs
+++ b/views/main-en/includes/footer.ejs
@@ -21,9 +21,11 @@
                 </div>
                 <div class="col-lg-4">
                     <ul class="list-unstyled nav-links social nav-right text-lg-right">
-                        <li><a href="#"><span class="ti-youtube"></span></a></li>
-                        <li><a href="#"><span class="ti-facebook"></span></a></li>
-                        <li><a href="#"><span class="ti-linkedin"></span></a></li>
+                        <li><a href="http://youtube.com/@geomatics_labdr.-ingashraf39"><span
+                                    class="ti-youtube"></span></a></li>
+                        <li><a href=" https://www.facebook.com/elmassaco"><span class="ti-facebook"></span></a></li>
+                        <li><a href="https://www.linkedin.com/in/ashraf-talaat-m-abdallah-1b60b7133/"><span
+                                    class="ti-linkedin"></span></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-12 text-lg-center" style="border-top: 2px solid #fff; margin-top: 20px;">
