--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/admin/css/rte_theme_default.css" />
     <link rel="stylesheet" href="/admin/css/style.css">
     <title>Elmasaa Consltant</title>
 </head>
@@ -23,7 +23,6 @@
                         <%- include('includes/about') %>
                             <%- include('includes/project') %>
                                 <%- include('includes/service') %>
-
                     </div>
                 </div>
         </div>
@@ -31,6 +30,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src='/admin/js/rte.js'></script>
     <script src="/admin/js/main.js"></script>
 </body>
 
