--- a/views/main-en/contact.ejs
+++ b/views/main-en/contact.ejs
@@ -100,7 +100,7 @@
                <div class="media contact-info">
                   <span class="contact-info__icon"><i class="ti-email"></i></span>
                   <div class="media-body">
-                     <h3>info@elmasa.com</h3>
+                     <h3>info@elmassaconsult.com</h3>
                      <p>Send us your query anytime!</p>
                   </div>
                </div>
