--- a/views/main-ar/about.ejs
+++ b/views/main-ar/about.ejs
@@ -24,7 +24,7 @@
                         <div class="home_tips_text text-center">
                             <h1>من نحن</h1>
                             <p style="text-align: right;" dir="rtl">
-                                <%= about.ar%>
+                                <%- about.ar%>
                             </p>
                         </div>
                         <%}else{%>
