--- a/views/main-ar/project.ejs
+++ b/views/main-ar/project.ejs
@@ -36,7 +36,7 @@
                                     <%=p.name.ar%>
                                 </h5>
                                 <p class="card-text">
-                                    <%=p.desc.ar.slice(0,50)%>
+                                    <%-p.desc.ar.slice(0,50)%>
                                 </p>
                                 <a href="/project/<%=p._id%>" class="btn_1">learn more <span><img
                                             src="/main/img/icon/left.svg" alt=""></span>
