--- a/views/main-ar/single_project.ejs
+++ b/views/main-ar/single_project.ejs
@@ -28,7 +28,7 @@
                     <div class="project_details_text">
                         <h2>وصف المشروع</h2>
                         <p>
-                            <%= p.desc.ar%>
+                            <%- p.desc.ar%>
                         </p>
                     </div>
                 </div>
