--- a/views/main-en/index.ejs
+++ b/views/main-en/index.ejs
@@ -14,7 +14,7 @@
                                     <%=p.name.en%>
                                 </h1>
                                 <p>
-                                    <%= p.desc.en.slice(0,50)%> ...
+                                    <%- p.desc.en.slice(0,50)%> ...
                                 </p>
                                 <div class="banner_btn">
                                     <a href="/project/<%=p._id%>" class="btn_1">learn more <span><img
@@ -121,7 +121,7 @@
                     <div class="about_part_text">
                         <h2>About Us</h2>
                         <p>
-                            <%=about.en.slice(0,200)%>...
+                            <%-about.en.slice(0,200)%>...
                         </p>
                         <a href="/about" class="btn_1">learn more <span><img src="/main/img/icon/left.svg"
                                     alt=""></span> </a>
