--- a/views/main-en/single_project.ejs
+++ b/views/main-en/single_project.ejs
@@ -28,7 +28,7 @@
                     <div class="project_details_text">
                         <h2>Project Description</h2>
                         <p>
-                            <%= p.desc.en%>
+                            <%- p.desc.en%>
                         </p>
                     </div>
                 </div>
