--- a/views/admin/includes/about.ejs
+++ b/views/admin/includes/about.ejs
@@ -4,11 +4,11 @@
         <% if(about){ %>
             <div class="mb-3">
                 <label for="txt">content</label>
-                <textarea name="en" class="form-control" cols="30" rows="6"><%=about.en%></textarea>
+                <textarea name="en" class="form-control" cols="30" rows="6" id="textarea_editor"><%-about.en%></textarea>
             </div>
             <div class="mb-3">
                 <label for="txt">المحتوى</label>
-                <textarea name="ar" class="form-control" cols="30" rows="6"><%=about.ar%></textarea>
+                <textarea name="ar" class="form-control" cols="30" rows="6" id="textarea_editor"><%-about.ar%></textarea>
             </div>
             <div class="mb-3">
                 <label for="video">video</label>
