--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="/admin/css/rte_theme_default.css" />
+    <script src="https://cdn.tiny.cloud/1/i8bvkf9ewubgnw1fyumc3azuzbix2pgpe5gf7tbvsd4u4qov/tinymce/6/tinymce.min.js"
+        referrerpolicy="origin"></script>
     <link rel="stylesheet" href="/admin/css/style.css">
     <title>Elmasaa Consltant</title>
 </head>
@@ -31,6 +33,13 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script type="text/javascript" src='/admin/js/rte.js'></script>
+    <script>
+        tinymce.init({
+            selector: '#textarea_editor',
+            plugins: 'anchor autolink charmap codesample emoticons image link lists media searchreplace table visualblocks wordcount',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table | align lineheight | numlist bullist indent outdent | emoticons charmap | removeformat',
+        });
+    </script>
     <script src="/admin/js/main.js"></script>
 </body>
 
