--- a/views/main-en/about.ejs
+++ b/views/main-en/about.ejs
@@ -24,7 +24,7 @@
                         <div class="home_tips_text text-center">
                             <h1>About Us</h1>
                             <p>
-                                <%= about.en%>
+                                <%- about.en%>
                             </p>
                         </div>
                         <%}else{%>
