--- a/public/main/css/style.css
+++ b/public/main/css/style.css
@@ -6421,7 +6421,7 @@ h6 {
   background-image: url("../img/page-header.png");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 100% 100%;
   height: 335px;
 }
 
