--- a/views/admin/includes/project.ejs
+++ b/views/admin/includes/project.ejs
@@ -86,7 +86,8 @@
                                         <div class="mb-3">
                                             <ul class="list-group">
                                                 <%s.imgs.forEach(i=>{ %>
-                                                    <li class="list-group-item" style="display: inline-block;">
+                                                    <li class="list-group-item" style="display: inline-block;"
+                                                        id="img<%=i%>">
                                                         <button type="button" class="btn btn-danger"
                                                             onclick="removeProjectImg('<%=s._id%>', '<%=i%>')">remove</button>
                                                         <img src="<%=i%>" alt="img" style="width: 100px;">
@@ -104,7 +105,6 @@
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary"
                                         data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Save changes</button>
                                 </div>
                             </div>
                         </div>
@@ -175,21 +175,20 @@
     }
     const removeProjectImg = (id, img) => {
         fetch(`/admin/remove-project-img/${id}`, {
-            Method: 'post',
-            Headers: {
-                Accept: 'application.json',
-                'Content-Type': 'application/json'
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json",
             },
-            Body: img
+            body: JSON.stringify({ img: img })
         })
             .then(response => {
-                return response.json()
-            })
-            .then(data => {
-                console.log(data)
+                if (response.status == 200) {
+                    document.getElementById(`img${img}`).remove()
+                }
             })
             .catch(err => {
                 console.log(err)
+                alert('Error')
             })
     }
 </script>
