add blogs section in admin part

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -25,6 +25,7 @@
                         <%- include('includes/about') %>
                             <%- include('includes/project') %>
                                 <%- include('includes/service') %>
+                                    <%- include('includes/blog') %>
                     </div>
                 </div>
         </div>
