--- a/views/main-en/includes/head.ejs
+++ b/views/main-en/includes/head.ejs
@@ -55,6 +55,7 @@
                                         <li><a href="/about">about us</a></li>
                                         <li><a href="/service">services</a></li>
                                         <li><a href="/projects">projects</a></li>
+                                        <li><a href="/blogs">blogs</a></li>
                                         <li><a href="/contact">contact us</a></li>
                                     </ul>
                                 </div>
