--- a/views/admin/includes/project.ejs
+++ b/views/admin/includes/project.ejs
@@ -99,6 +99,11 @@
                                             <label class="form-label">add new images</label>
                                             <input type="file" name="img" class="form-control" multiple>
                                         </div>
+                                        <div class="mb-3">
+                                            <label for="map">map</label>
+                                            <textarea name="map" class="form-control" cols="30"
+                                                rows="6"><%=s.map%></textarea>
+                                        </div>
                                         <button type="submit" class="btn btn-dark">submit</button>
                                     </form>
                                 </div>
@@ -145,6 +150,10 @@
             </div>
             <div class="mb-3">
                 <input type="file" name="img" class="form-control" multiple>
+            </div>
+            <div class="mb-3">
+                <label for="map">map</label>
+                <textarea name="map" class="form-control" cols="30" rows="6"></textarea>
             </div>
             <button type="submit" class="btn btn-dark">submit</button>
         </form>
