--- a/views/main-en/contact.ejs
+++ b/views/main-en/contact.ejs
@@ -98,6 +98,12 @@
                   </div>
                </div>
                <div class="media contact-info">
+                  <span class="contact-info__icon"><i class="ti-comments"></i></span>
+                  <div class="media-body">
+                     <h3>+20 100 060 7536</h3>
+                  </div>
+               </div>
+               <div class="media contact-info">
                   <span class="contact-info__icon"><i class="ti-email"></i></span>
                   <div class="media-body">
                      <h3>info@elmassaconsult.com</h3>
